ボタンで遷移

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="to_dashboard">To Dashboard</string>
+    <string name="to_notif">To Notification</string>
 </resources>
